# invoice-maker

./: Cargo.toml  foo.html  template.html
src/: invoice_maker.rs  main.rs
